[TIMELINE] fix flickering bug on mozilla and agenda bug on chrome. made filltimeline item at right place and change littre css

--- a/ExpressApp1/public/stylesheets/css/timeline/timelineMain.css
+++ b/ExpressApp1/public/stylesheets/css/timeline/timelineMain.css
@@ -12,7 +12,7 @@ Patterns - reusable parts of our design
 	color: #ffffff;
 	font-weight: 700;
 	text-transform: uppercase;
-	background-color: #a5c4bc;
+	background-color: #d0636c;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -33,18 +33,18 @@ Typography
 -------------------------------- */
 #timeline h1
 {
-	font-size: 2.6rem;
+	font-size: 5rem;
 	line-height: 1;
 	margin-bottom: 1em;
-	font-family: "IM Fell Double Pica", serif;
-	font-style: italic;
+	font-family: Tangerine, Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
+	font-weight: bold;
 }
 
 @media only screen and (min-width: 768px)
 {
 	#timeline h1
 	{
-		font-size: 5rem;
+		font-size: 7rem;
 	}
 }
 
@@ -57,7 +57,7 @@ Main Content
 {
 	height: 100vh;
 	width: 100%;
-	background-size: 100%;
+	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	position: absolute;
 	-webkit-filter: blur(5px);
@@ -108,7 +108,7 @@ Main Content
 #timeline .introduction
 {
 	text-align: center;
-
+	color: #ba1636;
 	padding-bottom: 100px;
 }
 
@@ -143,9 +143,9 @@ Modal window
 	background-size: cover;
 	opacity: 0;
 	visibility: hidden;
-	-webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+	/*-webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
 	-moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
-	transition: opacity 0.3s 0s, visibility 0s 0.3s;
+	transition: opacity 0.3s 0s, visibility 0s 0.3s;*/
 }
 
 	#timeline .modal .modal-content
@@ -218,9 +218,9 @@ Modal window
 {
 	opacity: 1;
 	visibility: visible;
-	-webkit-transition: opacity 0.7s, visibility 0s;
+	/*-webkit-transition: opacity 0.7s, visibility 0s;
 	-moz-transition: opacity 0.7s, visibility 0s;
-	transition: opacity 0.7s, visibility 0s;
+	transition: opacity 0.7s, visibility 0s;*/
 }
 
 	#timeline .modal.visible .modal-content
@@ -233,9 +233,9 @@ Modal window
 	{
 		visibility: visible;
 		opacity: 1;
-		-webkit-transition: -webkit-transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
+		/*-webkit-transition: -webkit-transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
 		-moz-transition: -moz-transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
-		transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
+		transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;*/
 		-webkit-transform: scale(1);
 		-moz-transform: scale(1);
 		-ms-transform: scale(1);
